Replace the favicons on the chrome://accessibility page with data urls.

WebUI doesn't allow remote network connections anymore for security reasons.

Bug: 854410
Change-Id: I448b24e87659e1f4f0aa6955d9a0cda4bfe8c8ac
Reviewed-on: https://chromium-review.googlesource.com/1107202
Reviewed-by: Katie Dektar <katie@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568871}
Former-commit-id: d511014ad69416cc0c93e4a8e59b41d9a72d6485